--- a/ChangeLog
+++ b/ChangeLog
@@ -5,13 +5,15 @@ Date:
 One-line Summary: New default settings for noresm3_0_beta02 release
 
 Details:
- - Update BLOM to tag v1.11.1
+ - Update ccs_config to ccs_config_noresm0.0.51
+ - Update BLOM to tag v1.11.2
  - Update CAM to tag noresm3_0_013_cam6_4_085
    - Introduce new history flags to contain all CAM output in NorESM3
  - Update CICE to tag noresm_cice6_6_0_20250522_v2
+ - Update CMEPS to tag cmeps1.0.39_noresm_v6
+   - Enable COARE algorithm by default for fully coupled NorESM compsets
  - Update MOSART to tag mosart1.1.12_noresm_v0
    - Updates NorESM to use ESCOMP mosart1.1.12
- - Update ccs_config to ccs_config_noresm0.0.51
  - Update git-fleximod to v1.0.2
 
 Component tags used in this tag:
@@ -20,14 +22,14 @@ Component tags used in this tag:
  - ccs_config : NorESMhub/ccs_config_noresm : ccs_config_noresm0.0.51
  - cime       : NorESMhub/cime              : cime6.1.73_noresm_v0
  - share      : NorESMHub/NorESM_share      : share1.1.9_noresm_v0
- - blom       : NorESMhub/BLOM              : v1.11.1
+ - blom       : NorESMhub/BLOM              : v1.11.2
  - cam        : NorESMhub/CAM               : noresm3_0_012_cam6_4_085
  - cdeps      : NorESMhub/CDEPS             : cdeps1.0.70_noresm_v7
  - cice6      : NorESMhub/NorESM_CICE       : noresm_cice6_6_0_20250522_v2
  - cism       : NorESMhub/CISM-wrapper      : cismwrap_2_2_007_noresm_v0
  - clm        : NorESMhub/CTSM              : ctsm5.3.045_noresm_v11
     - fates   : NorESMhub/fates             : sci.1.85.1_api.40.0.0_noresm_v4
- - cmeps      : NorESMhub/CMEPS             : cmeps1.0.39_noresm_v5
+ - cmeps      : NorESMhub/CMEPS             : cmeps1.0.39_noresm_v6
  - mosart     : NorESMhub/MOSART            : mosart1.1.13_noresm_v0
  - ww3        : NorESMhub/WW3_interface     : ww3_interface_noresm0.0.18
  - pycect     : NCAR/PyCECT                 : 3.2.2
@@ -37,7 +39,6 @@ Bugs fixed:
    (NorESMhub/CAM#234) ; (NorESMhub/OSLO_AERO#61)
  - CICE: Correct snow redistribution keyword from snwITDrdg to ITDrdg
    (NorESMhub/NORESM_CICE#18)
-
 
 Describe any changes made to scripts/build system:
    Update git-fleximod to version v1.0.2 (Aug. 15, 2025) from
