--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,8 @@ One-line Summary: Fixes for CISM%EVOLVE and new grids
 
 Details:
  - Update ccs_config to ccs_config_noresm0.0.52
+ - Update cam to noresm3_0_015_cam6_4_085
+   - Add new options for ZM and fix FATES-nocomp regression test
  - Update clm to ctsm5.3.045_noresm_v12
  - Update cmeps to cmeps1.0.39_noresm_v7 
  - Add new pelayouts for ne3pg3_tn14 and ne3pg3_tn21
@@ -18,13 +20,13 @@ Component tags used in this tag:
  - cime       : NorESMhub/cime              : cime6.1.73_noresm_v0
  - share      : NorESMHub/NorESM_share      : share1.1.9_noresm_v0
  - blom       : NorESMhub/BLOM              : v1.11.4
- - cam        : NorESMhub/CAM               : noresm3_0_013_cam6_4_085
+ - cam        : NorESMhub/CAM               : noresm3_0_015_cam6_4_085
  - cdeps      : NorESMhub/CDEPS             : cdeps1.0.70_noresm_v7
  - cice6      : NorESMhub/NorESM_CICE       : noresm_cice6_6_0_20250522_v2
  - cism       : NorESMhub/CISM-wrapper      : cismwrap_2_2_007_noresm_v0
  - clm        : NorESMhub/CTSM              : ctsm5.3.045_noresm_v12
     - fates   : NorESMhub/fates             : sci.1.85.1_api.40.0.0_noresm_v4
- - cmeps      : NorESMhub/CMEPS             : cmeps1.0.39_noresm_v6
+ - cmeps      : NorESMhub/CMEPS             : cmeps1.0.39_noresm_v7
  - mosart     : NorESMhub/MOSART            : mosart1.1.12_noresm_v0
  - ww3        : NorESMhub/WW3_interface     : ww3_interface_noresm0.0.18
  - pycect     : NCAR/PyCECT                 : 3.2.2
