--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,50 @@
 ==============================================================
 
+Tag name: noresm3_0_beta03
+Date:
+One-line Summary:
+
+Details:
+ - Update blom to v1.12.1
+
+Component tags used in this tag:
+
+ - parallelio : NCAR/ParallelIO             : pio2_6_2
+ - ccs_config : NorESMhub/ccs_config_noresm : ccs_config_noresm0.0.52
+ - cime       : NorESMhub/cime              : cime6.1.73_noresm_v0
+ - share      : NorESMHub/NorESM_share      : share1.1.9_noresm_v0
+ - blom       : NorESMhub/BLOM              : v1.12.1
+ - cam        : NorESMhub/CAM               : noresm3_0_015_cam6_4_085
+ - cdeps      : NorESMhub/CDEPS             : cdeps1.0.70_noresm_v7
+ - cice6      : NorESMhub/NorESM_CICE       : noresm_cice6_6_0_20250522_v2
+ - cism       : NorESMhub/CISM-wrapper      : cismwrap_2_2_007_noresm_v0
+ - clm        : NorESMhub/CTSM              : ctsm5.3.045_noresm_v12
+    - fates   : NorESMhub/fates             : sci.1.85.1_api.40.0.0_noresm_v4
+ - cmeps      : NorESMhub/CMEPS             : cmeps1.0.39_noresm_v7
+ - mosart     : NorESMhub/MOSART            : mosart1.1.12_noresm_v0
+ - ww3        : NorESMhub/WW3_interface     : ww3_interface_noresm0.0.18
+ - pycect     : NCAR/PyCECT                 : 3.2.2
+
+Bugs fixed:
+ -
+
+Describe any changes made to scripts/build system:
+
+
+Describe any substantial timing or memory changes:
+
+
+Code merged by: Tomas Torsvik
+
+Code reviewed by: Steve Goldhaber, Matvey Debolskiy, Mats Bentsen
+                  Mariana Vertenstein
+
+Summary of pre-tag testing:
+
+Summarize any change to answers:
+
+==============================================================
+
 Tag name: noresm3_0_beta02a
 Date: 15-09-2025
 One-line Summary: Fixes for CISM%EVOLVE and new grids
