--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,7 @@ One-line Summary:
 
 Details:
  - Update blom to v1.12.2
+ - Update CAM to noresm3_0_016_cam6_4_085
 
 Component tags used in this tag:
 
@@ -14,7 +15,7 @@ Component tags used in this tag:
  - cime       : NorESMhub/cime              : cime6.1.73_noresm_v0
  - share      : NorESMHub/NorESM_share      : share1.1.9_noresm_v0
  - blom       : NorESMhub/BLOM              : v1.12.2
- - cam        : NorESMhub/CAM               : noresm3_0_015_cam6_4_085
+ - cam        : NorESMhub/CAM               : noresm3_0_016_cam6_4_085
  - cdeps      : NorESMhub/CDEPS             : cdeps1.0.70_noresm_v7
  - cice6      : NorESMhub/NorESM_CICE       : noresm_cice6_6_0_20250522_v2
  - cism       : NorESMhub/CISM-wrapper      : cismwrap_2_2_007_noresm_v0
