--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,47 @@
 ==============================================================
 
+Tag name: noresm3_0_beta03a
+Date: 24-09-2025
+One-line Summary: TBD
+
+Details:
+ - Update blom to v1.12.5
+   - speed up of ERI tests
+
+Component tags used in this tag:
+
+ - parallelio : NCAR/ParallelIO             : pio2_6_2
+ - ccs_config : NorESMhub/ccs_config_noresm : ccs_config_noresm0.0.52
+ - cime       : NorESMhub/cime              : cime6.1.73_noresm_v0
+ - share      : NorESMHub/NorESM_share      : share1.1.9_noresm_v0
+ - blom       : NorESMhub/BLOM              : v1.12.5
+ - cam        : NorESMhub/CAM               : noresm3_0_017_cam6_4_085
+ - cdeps      : NorESMhub/CDEPS             : cdeps1.0.70_noresm_v7
+ - cice6      : NorESMhub/NorESM_CICE       : noresm_cice6_6_0_20250522_v2
+ - cism       : NorESMhub/CISM-wrapper      : cismwrap_2_2_007_noresm_v0
+ - clm        : NorESMhub/CTSM              : ctsm5.3.045_noresm_v12
+    - fates   : NorESMhub/fates             : sci.1.85.1_api.40.0.0_noresm_v4
+ - cmeps      : NorESMhub/CMEPS             : cmeps1.0.39_noresm_v8
+ - mosart     : NorESMhub/MOSART            : mosart1.1.12_noresm_v0
+ - ww3        : NorESMhub/WW3_interface     : ww3_interface_noresm0.0.18
+ - pycect     : NCAR/PyCECT                 : 3.2.2
+
+Bugs fixed:
+
+Describe any changes made to scripts/build system: NA
+
+Describe any substantial timing or memory changes: NA
+
+Code merged by:
+
+Code reviewed by: Mariana Vertenstein, Matvey Debolskiy
+
+Summary of pre-tag testing:
+
+Summarize any change to answers:
+
+==============================================================
+
 Tag name: noresm3_0_beta03
 Date: 24-09-2025
 One-line Summary: Adjust vertical layers in BLOM; BLOM and CAM bug fixes
@@ -102,7 +144,7 @@ Component tags used in this tag:
  - pycect     : NCAR/PyCECT                 : 3.2.2
 
 Bugs fixed:
- - 
+ -
 
 Describe any changes made to scripts/build system:
 
@@ -648,8 +690,8 @@ Describe any substantial timing or memory changes: NA
 Code reviewed by: Steve Goldhaber, Matvey Debolskiy
 
 Summary of pre-tag testing:
- - prealpha_noresm : all tests PASS 
- - aux_clm_noresm  : all tests PASS 
+ - prealpha_noresm : all tests PASS
+ - aux_clm_noresm  : all tests PASS
  - ERI_D_Ld12.ne16pg3_tn14.N1850fates-nocomp tests with Leung on PASS
 
 Summarize any change to answers:
@@ -698,8 +740,8 @@ Code reviewed by: Steve Goldhaber, Matvey Debolskiy
 
 Summary of pre-tag testing:
  - aux_blom_noresm : tests PASS (except the "expected FAIL" tests)
- - prealpha_noresm : all tests PASS 
- - aux_clm_noresm  : all tests PASS 
+ - prealpha_noresm : all tests PASS
+ - aux_clm_noresm  : all tests PASS
 
 Summarize any change to answers:
   No previous baselines:
@@ -871,7 +913,7 @@ Bugs fixed: Invalid values for NF2000 ERS tests with fates,
             failures to run IxClm60Fatesx compsets with datm settings
             that are consistent with cam7 radiation coupling
 
-Describe any changes made to scripts/build system: 
+Describe any changes made to scripts/build system:
 
 Describe any substantial timing or memory changes: NA
  - TPUTCOMP fails with > +30% change. Might be due to betzy issues
