--- a/ChangeLog
+++ b/ChangeLog
@@ -14,11 +14,13 @@ Details:
      - Fixed numerical tree_lai/canopy resistance bug 
  - Update CDEPS to cdeps1.0.70_noresm_v8
    - Bugfix for nitrogen deposition units in datm_cplhist_mode
+ - Update ccs_config to ccs_config_noresm0.0.54
+   - Added runoff map JRA -> tn21
 
 Component tags used in this tag:
 
  - parallelio : NCAR/ParallelIO             : pio2_6_2
- - ccs_config : NorESMhub/ccs_config_noresm : ccs_config_noresm0.0.53
+ - ccs_config : NorESMhub/ccs_config_noresm : ccs_config_noresm0.0.54
  - cime       : NorESMhub/cime              : cime6.1.73_noresm_v0
  - share      : NorESMHub/NorESM_share      : share1.1.9_noresm_v0
  - blom       : NorESMhub/BLOM              : v1.12.15
